# mlp

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: visualizer_api.md
src/mlp/: cli.py  loader.py
src/mlp/data/: data_engineering.py  feature_engineering.py
src/mlp/model/: __init__.py  compare.py  evaluation.py  mlp_classifier.py  model.py  plots.py  predict.py  schemas.py  serialization.py  telemetry.py  training.py
src/mlp/utils/: CustomStandardScaler.py  constants.py  loader.py
src/mlp/visualizer/: __init__.py  api_schemas.py  datasets_util.py  discovery.py  replay_schemas.py  replay_slice.py  replay_writer.py  server.py
src/scripts/: compare_activation_speed.py
visualizer/frontend/: index.html  package-lock.json  package.json
visualizer/frontend/src/: App.tsx  FullscreenLessonPlayback.tsx  index.css  lessonUtils.ts  types.ts
visualizer/frontend/src/components/: DataManagementPanel.tsx  DatasetCsvPickRow.tsx  GridSearchPanel.tsx  ui-shell.tsx
